# recursive_diff

./: .appveyor.yml  .dprint.jsonc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  HOW_TO_RELEASE  MANIFEST.in  README.md  lefthook.yml  pixi.toml  pull_request_template.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  smoke_test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  lint.yml  pytest-minimal.yml  pytest.yml  wheels.yml
ci/: .coveragerc  requirements-conda-forge.yml  requirements-docs.yml  requirements-latest.yml  requirements-lint.yml  requirements-minimal.yml  requirements-no_optionals.yml  requirements-py35.yml  requirements-py36-windows.yml  requirements-py36.yml  requirements-py37.yml  requirements-upstream.yml  requirements.yml
doc/: Makefile  api.rst  cli.rst  conf.py  dask.ipynb  develop.rst  extend.rst  index.rst  installing.rst  ncdiff.rst  notebooks.ipynb  quickstart.rst  requirements.yml  whats-new.rst
doc/_templates/: layout.html
doc/api/: recursive_diff.rst  testing.rst
poc/: test_poc.py
recursive_diff/: __init__.py  cast.py  core.py  dask_compat.py  dask_or_stub.py  files.py  ncdiff.py  proper_unstack.py  public.py  recursive_diff.py  recursive_eq.py
recursive_diff/cli/: ncdiff.py  recursive_diff.py
recursive_diff/tests/: __init__.py  conftest.py  memory.py  test_cli.py  test_diff_arrays.py  test_display_diffs.py  test_files.py  test_ncdiff.py  test_proper_unstack.py  test_recursive_diff.py  test_recursive_diff_numpy_types.py  test_recursive_eq.py
