[metadata]
name = recursive_diff
author = Guido Imperiale
author_email = crusaderky@gmail.com
license = Apache
description = Recursively compare two Python data structures
description_content_type=text/plain
url = https://github.com/crusaderky/recursive_diff
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = recursive_diff
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy >= 1.16
    pandas >= 0.25
    xarray >= 0.12
setup_requires = setuptools_scm

[options.package_data]
recursive_diff =
    py.typed

[options.entry_points]
console_scripts =
    ncdiff = recursive_diff.ncdiff:main

[bdist_wheel]
universal = 1

[wheel]
universal = 1

[tool:pytest]
addopts = --strict-markers
python_files = test_*.py
testpaths = recursive_diff/tests

[flake8]
# https://github.com/python/black#line-length
max-line-length = 88
# E203: PEP8-compliant slice operators
#       https://github.com/python/black#slices
# W503: Allow for breaks before binary operator (Knuth's convention) - see
#       https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
ignore = E203, W503
exclude =
  .eggs
  doc/

[isort]
default_section = THIRDPARTY
known_first_party = recursive_diff
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy-*]
ignore_missing_imports = True
